<resources>
    <string name="app_name">Mani-Reminder</string>

    <string name="view_all_reminders">View All Reminders</string>
    <string name="view_history">Situations &amp; Events History</string>
    <string name="fresh_restart">Fresh-Restart the App</string>
    <string name="filter">Filter</string>
    <string name="create_reminder">Create Reminder</string>
    <string name="remove_reminder">Remove This Reminder</string>
    <string name="view_reminder_settings">View Reminder Settings</string>
    <string name="edit_sits_events">Edit Situations &amp; Events</string>

    <string name="dialog_title_confirm_remove">Confirm removal</string>
    <string name="dialog_msg_confirm_remove">Are you sure to remove this reminder?</string>
    <string name="dialog_title_edit_title">Edit title:</string>

    <string name="msg_tag_should_have_no_comma">Please don\'t use commas in a tag.</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="done">DONE</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="stop">Stop</string>
    <string name="situations">Situations</string>
    <string name="events">Events</string>
    <string name="both">Both</string>
    <string name="start">Start</string>
    <string name="board">Board</string>
    <string name="situations_and_events">Situations &amp; Events</string>
    <string name="insert_time_stamp">Time Stamp</string>
    <string name="close_reminder">Close Reminder</string>

    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="Sun">Sun</string>
    <string name="none_days">None</string>
    <string name="weekdays">Weekdays</string>
    <string name="weekend">Weekend</string>
    <string name="all_days">All Days</string>

    <string name="label_tag_to_add">Tag to add:</string>
    <string name="label_all_tags">All tags:</string>
    <string name="label_reminder_tags">Reminder tags:</string>
    <string name="label_description">Description: </string>
    <string name="label_checklist">Checklist: </string>
    <string name="label_tags">Tags: </string>
    <string name="hint_tag_to_add">tag to add</string>
    <string name="label_behavior_settings">Behavior</string>
    <string name="label_model">model: </string>
    <string name="label_model_cap">Model: </string>
    <string name="label_repeat">repeat: </string>
    <string name="label_instants">Instants: </string>
    <string name="label_periods">Periods: </string>
    <string name="label_repeat_pattern">Repeat pattern: </string>
    <string name="label_repeat_every">repeat every </string>
    <string name="label_min"> min</string>
    <string name="label_offset">offset: </string>
    <string name="label_start_instant">Start instant: </string>
    <string name="label_end_condition">End condition: </string>
    <string name="label_type">type: </string>
    <string name="label_time">time: </string>
    <string name="label_days_of_week">days of week: </string>
    <string name="label_after">after </string>
    <string name="label_situation">Situation: </string>
    <string name="label_event">Event: </string>
    <string name="label_set">set</string>
    <string name="label_next_day">Next Day</string>
    <string name="label_started_situations">Started situations:</string>
    <string name="label_quick_notes">Quick notes:</string>
    <string name="hint_add_quick_note">add quick notes</string>
    <string name="label_filter">Filter: </string>

    <string name="todo_allcap">TODO</string>

    <string name="todo_at_instants">Todo at Instants</string>
    <string name="remind_during_periods">Remind during Periods</string>
    <string name="todo_repeatedly_during_periods">Todo Repeatedly during Periods</string>
    <string name="no_settings">(no settings)</string>

    <string-array name="reminder_modes">
        <item>None</item>
        <item>Todo at Instants</item>
        <item>Remind during Periods</item>
        <item>Todo Repetitively during Periods</item>
    </string-array>

    <string name="test_long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
