<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_view_all_reminders"
        android:title="@string/view_all_reminders"
        android:orderInCategory="1"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit_sits_events"
        android:title="@string/edit_sits_events"
        android:orderInCategory="8"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_history"
        android:title="@string/view_history"
        android:orderInCategory="9"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_fresh_restart"
        android:title="@string/fresh_restart"
        android:orderInCategory="10"
        app:showAsAction="never" />
</menu>