<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    tools:context=".EditRemBehaviorFragment" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:text="@string/label_model_cap"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- repeat pattern -->
    <LinearLayout
        android:id="@+id/container_repeat_pattern"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="2dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_repeat_pattern"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:focusable="true"
            android:focusableInTouchMode="true" >

            <!-- to remove auto focus on the EditText edit_repeat_every: -->
            <requestFocus />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_repeat_every"/>

            <EditText
                android:id="@+id/edit_repeat_every"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:gravity="start"
                android:hint="1"
                android:inputType="number"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_min"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_offset"/>

            <EditText
                android:id="@+id/edit_repeat_offset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:gravity="start"
                android:hint="0"
                android:inputType="number"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_min"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="6dp"
        android:background="?android:attr/listDivider" />

    <!-- instants/periods list -->
    <TextView
        android:id="@+id/label_instants_or_periods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        tools:text="Instants/Periods:" />

    <LinearLayout
        android:id="@+id/container_instants_periods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="6dp"
        android:baselineAligned="false" >

        <LinearLayout
            android:id="@+id/instants_periods_list"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/button_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_add_black_24"
                android:contentDescription="@string/add" />
            <ImageButton
                android:id="@+id/button_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_edit_black_24"
                android:contentDescription="@string/edit" />
            <ImageButton
                android:id="@+id/button_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_remove_black_24"
                android:contentDescription="@string/remove" />
        </LinearLayout>
    </LinearLayout>

    <!-- instant/period edit box -->
    <LinearLayout
        android:id="@+id/container_edit_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:padding="4dp"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/label_edit_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            tools:text="edit" />

        <TextView
            android:id="@+id/label_start_instant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_start_instant"
            android:textSize="16sp" />

        <!-- start instant -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_start_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_type" />

                <Spinner
                    android:id="@+id/spinner_start_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/container_start_sit_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/label_sit_or_event"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="sit/event:" />

                    <Spinner
                        android:id="@+id/spinner_sit_or_event"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/label_start_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_time" />

                    <Button
                        android:id="@+id/button_start_time"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/label_set"
                        android:textAllCaps="false" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_days_of_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/label_days_of_week"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_days_of_week" />

                    <Button
                        android:id="@+id/button_days_of_week"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/label_set"
                        android:textAllCaps="false" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!-- end condition -->
        <TextView
            android:id="@+id/label_end_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/label_end_condition"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/container_end_cond"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_end_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_type" />

            <Spinner
                android:id="@+id/spinner_end_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/label_endcondition_after"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_after" />

                    <EditText
                        android:id="@+id/edit_after_minutes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:gravity="start"
                        android:hint="1"
                        android:inputType="number"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/label_endcondition_min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_min" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/label_end_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_time" />

                    <Button
                        android:id="@+id/button_end_time"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:fontFamily="sans-serif"
                        android:text="hh:mm"
                        android:textAllCaps="false" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/button_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/done"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>