<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InteractActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main" />

    <TextView
        android:id="@+id/reminder_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold"
        tools:text="Reminder Title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="4dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_description" />

            <TextView
                android:id="@+id/reminder_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginStart="8dp"
                android:textColor="#303030"
                android:textSize="16sp"
                tools:text="Reminder description" />

            <LinearLayout
                android:id="@+id/container_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_close_reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close_reminder"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="1dp"
                    android:text="@string/label_quick_notes" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/insert_time_stamp"
                    android:textAllCaps="false" />

            </LinearLayout>

            <EditText
                android:id="@+id/quick_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="6dp"
                android:background="@drawable/shape_rect_border_white_back"
                android:hint="@string/hint_add_quick_note"
                android:inputType="text|textMultiLine"
                android:padding="3dp"
                android:textSize="16sp" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>